# quote_your_bs

./: .flake8  .gitignore  example.md  ingestion.py  main.ipynb  main.py  pyproject.toml
mb/: message_1.json  message_10.json  message_100.json  message_101.json  message_102.json  message_103.json  message_104.json  message_105.json  message_106.json  message_107.json  message_108.json  message_109.json  message_11.json  message_110.json  message_111.json  message_112.json  message_113.json  message_114.json  message_115.json  message_12.json  message_13.json  message_14.json  message_15.json  message_16.json  message_17.json  message_18.json  message_19.json  message_2.json  message_20.json  message_21.json  message_22.json  message_23.json  message_24.json  message_25.json  message_26.json  message_27.json  message_28.json  message_29.json  message_3.json  message_30.json  (+75 more)
src/: constants.py  image_handling.py  prompts.py  utils.py
src/embeddings/: nomic.py
src/loaders/: __init__.py  messenger_loader.py  utils.py
src/runnables/: answer.py  query_variation.py  retrieval.py  utils.py
