[project]
name = "quote-your-bs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "sentence-transformers>=5.1.1",
    "transformers>=4.55.4",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "flake8>=7.3.0",
    "hf-xet>=1.1.8",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "notebook>=7.4.5",
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = [ "py311", "py312" ]

[tool.isort]
multi_line_output = 3
force_single_line = false
group_by_package = true
combine_as_imports = true
line_length = 120
include_trailing_comma = true
